syntax = "proto3";

import "google/api/annotations.proto";

package wallirpc;

service Walli {
  rpc getInfo (GetInfoRequest) returns (GetInfoResponse);
}

message GetInfoRequest {}
message GetInfoResponse {
  string version = 1;
  BtcdInfo btcdInfo = 2;
  LndInfo lndInfo = 3;
}

message LndInfo {
  string version = 1;
  LndChannels lndChannels = 3;
  int32 blockheight = 4;
  string error = 6;
}

message BtcdInfo {
  int32 version = 1;
  int32 protocolversion = 2;
  int32 blocks = 3;
  int32 connections = 5;
  bool testnet = 8;
}

message LndChannels {
  int32 active = 1;
  int32 inactive = 2;
  int32 pending = 3;
}
